--- a/plugin.conf
+++ b/plugin.conf
@@ -1,12 +1,12 @@
 # @Bevywise.com IOT Initiative. All rights reserved 
 # www.bevywise.com Email - support@bevywise.com
 #
-# broker.conf
+# plugin.conf
 #
 # The configuration file that holds the configuration for the MongoDB. 
 # This file will be read at the start. 
 
-# The Configuration section need to specified as MONGO
+# The Configuration section need to specified as MONGO and LOG
 ###################################################################### 
 
 [MONGO]
