--- a/plugin.conf
+++ b/plugin.conf
@@ -15,5 +15,10 @@ PORT = 27017
 DB_NAME = bevywise
 COLLECTION = mqttroute
 
+[AUTHENTICATION]
+AUTHENTICATION_ENABLED = TRUE
+USERNAME = root
+PASSWORD = root
+
 [LOG]
 LOG_FILE_PATH = ./log
