options shown in plugin.conf

--- a/plugin.conf
+++ b/plugin.conf
@@ -16,7 +16,8 @@ DB_NAME = bevywise
 COLLECTION = mqttroute
 
 [AUTHENTICATION]
-AUTHENTICATION_ENABLED = TRUE
+AUTHENTICATION_ENABLED = FALSE 
+# TRUE || FALSE
 USERNAME = root
 PASSWORD = root
 
